# drf-project-template

./: .env  .gitignore  Makefile  README.md  apps.py  cookiecutter.json  managers.py  models.py  pyproject.toml
hooks/: post_gen_project.py
src/: manage.py
src/config/: settings.py  urls.py
src/core/: managers.py
src/users/: README.md  models.py
src/users/migrations/: 0001_initial.py
{{ cookiecutter.name }}/: .gitignore  Makefile
{{ cookiecutter.name }}/src/config/: settings.py
{{ cookiecutter.name }}/src/core/: README.md  models.py
{{ cookiecutter.name }}/src/users/: managers.py
