[project]
# TODO: split to template and cookiecutter .toml
name = "drf-project-template"
version = "0.0.1"
description = "Template for creating django rest framework project."
authors = [
    {name = "Tvo-Po", email = "maxwellgleb@gmail.com"},
]
dependencies = [
    "django~=4.2.0",
    "djangorestframework~=3.14.0",
    "cookiecutter~=2.5.0",
    "django-environ~=0.11.2",
    "django-cors-headers~=4.3.1",
    "django-filter~=23.5",
    "drf-spectacular~=0.26.5",
]
requires-python = "~=3.11.0"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
    "ruff>=0.1.7",
    "bandit>=1.7.5",
    "mypy>=1.7.1",
    "isort>=5.12.0",
]


[tool.black]
line-length = 90
extend-exclude = "migrations"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 90

[tool.mypy]
exclude = [
    '^src/manage\.py$',
]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
strict_equality = true
